changes are done

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=90c9aed375dc84fd03ca9ba675f1ad6e
-MONGO_URI=mongodb://localhost:27017/bms
+MONGO_URI=mongodb+srv://chandukampasati1_db_user:1FNeTyxyz0mEgLbb@cluster0.xns4imt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
