--- a/render.yaml
+++ b/render.yaml
@@ -8,16 +8,16 @@ services:
     healthCheckPath: /
     envVars:
       - key: DATABASE_URL
-        value: mongodb+srv://chandukampasati1_db_user:1FNeTyxyz0mEgLbb@cluster0.xns4imt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+        value: YOUR_DATABASE_URL_HERE
       - key: PORT
         value: 5000
 
-  - type: web
+  - type: static
     name: bms-frontend
-    env: docker
-    dockerfilePath: ./Dockerfile.frontend
-    dockerContext: .
     plan: free
+    rootDir: bms-frontend-ts
+    buildCommand: npm install && npm run build
+    publishPath: build
     routes:
       - type: rewrite
         source: /*
