--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: PORT
         value: 5000
 
-  - type: static
+  - type: static_site
     name: bms-frontend
     plan: free
     rootDir: bms-frontend-ts
