feat: integrate Cloudinary for all file uploads
- Add cloudinary dependency to package.json
- Refactor shopProfile and invoice routes to use Cloudinary for uploads
- Use memoryStorage for multer to handle files as buffers
- Remove local file system storage and serving logic

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.5.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "cloudinary": "^2.2.0"
   }
 }
